--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       theme: {
         extend: {
           backgroundImage: {
-            'mobileBg' : "url('/images/bg-mobile.svg')",
-            'desktopBg' : "url('/images/bg-desktop.svg')"
+            'mobileBg' : "url('./images/bg-mobile.svg')",
+            'desktopBg' : "url('./images/bg-desktop.svg')"
           },
           colors: {
             'violet': 'hsl(257, 40%, 49%)',
